.provarCaches/00D5f000005vwGkEAI/objects/rstk__syactivitydiv__c.object
<CustomObject>
    <description>syactivitydiv__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syactivitydiv_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division Master</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>syactivitydiv</relationshipLabel>
        <relationshipName>divsyactivitydivs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syactivitydiv_mrplock__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>mrplock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syactivitydiv_mrplockreqd__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>mrplockreqd</label>
        <type>Checkbox</type>
    </fields>
    <label>syactivitydiv</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>syactivitydiv</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>